--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   }
