--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   }
